--- a/src/components/Navbar/Users/Users.module.css
+++ b/src/components/Navbar/Users/Users.module.css
@@ -2,3 +2,12 @@
   width: 150px;
   height: 150px;
 }
+
+.selectedPage {
+  font-weight: bold;
+}
+
+.paginationItem {
+  cursor: pointer;
+  margin: 10px;
+}
