--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,16 @@
 .header {
-    grid-area: h;
-    background-color: green;
-  }
-  
-  .header img {
-    width: 60px;
-    }
+  grid-area: h;
+  background-color: green;
+}
+
+.header img {
+  width: 60px;
+}
+
+.loginBlock {
+  float: right;
+  margin-right: 20px;
+}
+.loginBlock a {
+  color: whitesmoke;
+}
